买入、卖出后持仓计算逻辑优化